--- a/public/CSS_Files/about.css
+++ b/public/CSS_Files/about.css
@@ -256,3 +256,26 @@ a:hover {
         font-size: 16px;
     }
 }
+
+.video-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem auto;
+    width: 80%;
+    background-color: #f9f9f9;
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.video-container h2 {
+    color: #6D834F;
+    margin-bottom: 1rem;
+}
+
+.video-container video {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
